-----------------------------
* Create now use a CWnd pointer instead of a HWND when specifying the 
   parent window.
* Dialogs and Property Sheets now use a CWnd pointer instead of a HWND
   when specifying the parent window.
* CTab has been enhanced. The TCS_FIXEDWIDTH and TCS_OWNERDRAWFIXED styles
   are now optional.

- Added tStringStream typedef (a TCHAR stringstream)
- Added CDialog::AttachItem
- Added CDockContainer::SetActiveContainer
- Added CDocker::Close
- Added CDocker::SetCaptionHeight
- Added CTab::SetFixedWidth
- Added CTab::SetOwnerDraw
- Added CWnd::BeginPaint
- Added CWnd::ClientToScreen 
- Added CWnd::CheckRadioButton
- Added CWnd::DlgDirList
- Added CWnd::DlgDirListComboBox
- Added CWnd::DlgDirSelectEx
- Added CWnd::DlgDirSelectComboBoxEx
- Added CWnd::DrawAnimatedRects
- Added CWnd::DrawCaption
- Added CWnd::EndPaint
- Added CWnd::GetNextDlgGroupItem
- Added CWnd::GetNextDlgTabItem
- Added CWnd::GetSystemMenu
- Added CWnd::GetUpdateRect
- Added CWnd::GetUpdateRgn
- Added CWnd::HiliteMenuItem
- Added CWnd::IsDialogMessage
- Added CWnd::IsDlgButtonChecked 
- Added CWnd::MapWindowPoints
- Added CWnd::Print
- Added CWnd::ScreenToClient 
- Added CWnd::SendNotifyMessage
- Modified CDialog 				now takes a CWnd pointer instead of HWND
- Modified CResizer::AddChild	now takes a CWnd reference
- Modified CWnd::Create 		now takes a CWnd pointer instead of HWND
- Modified CWnd::CreateEx       now takes a CWnd pointer instead of HWND
- Renamed CDocker::GetDockWidth to CDocker::GetRedockSize
- Renamed CDocker::SetDockWidth to CDocker::SetDockSize
- Moved CWnd::LoadBitmap to LoadBitmap
- Moved CWnd::LoadString to LoadString

Incompatibilities with previous versions
----------------------------------------
* Windows, dialogs and property sheets now use a CWnd pointer instead of a HWND
   to specify the parent window.
* CTab defaults to not using the CS_FIXEDWIDTH and TCS_OWNERDRAWFIXED styles. 